--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,6 @@ html {
 }
 body {
   background: #eee;
+  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
   padding: 0 16px;
 }
