--- a/src/components/CreateArea/CreateArea.css
+++ b/src/components/CreateArea/CreateArea.css
@@ -1,4 +1,4 @@
-form {
+form.create-note {
   position: relative;
   width: 480px;
   margin: 30px auto 20px auto;
@@ -7,9 +7,8 @@ form {
   border-radius: 7px;
   box-shadow: 0 1px 5px rgb(138, 137, 137);
 }
-
-form input,
-form textarea {
+form.create-note input,
+form.create-note textarea {
   width: 100%;
   border: none;
   padding: 4px;
@@ -18,8 +17,7 @@ form textarea {
   font-family: inherit;
   resize: none;
 }
-
-form button {
+form.create-note button {
   position: absolute;
   right: 18px;
   bottom: -18px;
@@ -32,4 +30,8 @@ form button {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   cursor: pointer;
   outline: none;
+}
+
+form.create-note button:hover {
+  background: #f4cc5f;
 }
